--- a/siteTreino/css/estilo-responsivo.css
+++ b/siteTreino/css/estilo-responsivo.css
@@ -99,7 +99,10 @@ col:hover {
 	background-color:green;
 }
 
-
+iframe {
+    width: 420px;
+    height: 315px;
+}
 
 /******       Área da animação   ****************/
 
@@ -282,6 +285,13 @@ div#container-direita {
     
     table {
         margin: auto;
+    }
+    
+    /****  Vídeos  width="420" height="315" ****/
+    
+    #videos iframe {
+        width: 100%;
+        height: 265px;
     }
     
     /****  Animações  ****/
