--- a/siteTreino/css/estilo-responsivo.css
+++ b/siteTreino/css/estilo-responsivo.css
@@ -99,9 +99,53 @@ col:hover {
 	background-color:green;
 }
 
+/***  Área dos vídeos  ****************/
+
+
 iframe {
-    width: 420px;
-    height: 315px;
+    position: relative;
+    width: 80%;
+    height: 100%;
+    margin: 0 10%;
+}
+
+.embedded-video {
+    width: 484px;
+    height: 320px;
+    position: relative;
+    border: 2px solid green;
+}
+
+.faixa {
+    position: relative;
+    display: none;
+    width: 10%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.faixa button {
+    width: 80%;
+    height: 20%;
+    padding: 0;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+    top: 40%;
+    left: 10%;
+}
+
+#faixa-esquerda {
+    float: left;
+}
+
+#faixa-direita {
+    float: right;
+}
+
+#videos nav ul li a:hover{
+    cursor: pointer;
 }
 
 /******       Área da animação   ****************/
@@ -144,7 +188,7 @@ button#restart {
 	display: none;
 }
 
-section#joguinhos h1, h2{
+section#jogos h1, section#jogos p{
 	text-align: center;
 }
 
@@ -289,10 +333,12 @@ div#container-direita {
     
     /****  Vídeos  width="420" height="315" ****/
     
-    #videos iframe {
+    .embedded-video {
         width: 100%;
         height: 265px;
     }
+    
+    
     
     /****  Animações  ****/
     
