--- a/siteTreino/semFramework/css/estilo-responsivo.css
+++ b/siteTreino/semFramework/css/estilo-responsivo.css
@@ -27,10 +27,6 @@ nav ul li {
     margin-left: 0px;
 }
 
-nav ul li.icon {
-    display: none;
-}
-
 nav li a {
     text-decoration: none;
     font-size: 1.2em;
@@ -119,7 +115,7 @@ iframe {
     width: 484px;
     height: 320px;
     position: relative;
-    border: 2px solid green;
+    /*border: 2px solid green;*/
     background-color: #222;
 }
 
@@ -157,6 +153,35 @@ iframe {
 
 #videos nav ul li a:hover{
     cursor: pointer;
+}
+
+ul.bottom-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    width: 484px;
+}
+
+ul.bottom-menu li {
+    float: left;
+    border-left: 1px solid #fff; 
+}
+
+ul.bottom-menu li:first-child {
+    border-left: none;
+    margin-left: 18%;
+}
+
+ul.bottom-menu li a {
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 17px;
 }
 
 /******       Área da animação   ****************/
@@ -347,6 +372,10 @@ div#container-direita {
     .embedded-video {
         width: 100%;
         height: 265px;
+    }
+    
+    ul.bottom-menu {
+        width: 100%;
     }
     
     
