--- a/siteTreino/semFramework/css/estilo-responsivo.css
+++ b/siteTreino/semFramework/css/estilo-responsivo.css
@@ -378,6 +378,10 @@ div#container-direita {
         width: 100%;
     }
     
+    ul.bottom-menu li:first-child {
+        margin-left: 10%;
+    }
+    
     
     
     /****  Animações  ****/
@@ -397,7 +401,16 @@ div#container-direita {
     }
 }
 
+@media only screen and (max-width: 400px){
+    ul.bottom-menu li:first-child {
+        margin-left: 5%;
+    }
     
+    ul.bottom-menu li a {
+        padding: 14px 12px;
+    }
+}
+
 
 @media only screen and (min-width: 501px) {
     body {
