Alinhando os conteiners de animação no modo smartphone

--- a/siteTreino/semFramework/css/estilo-responsivo.css
+++ b/siteTreino/semFramework/css/estilo-responsivo.css
@@ -389,13 +389,9 @@ section#jogos {
     
     
     /****  Animações  ****/
-    
-    
-    
-    
-    
-    
-    
+    div#container-direita {
+        margin-left : 0px;
+    }
     
     /* fim da aéra das animações */
     
