--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -40,6 +40,10 @@ footer {
     display: block;
 }
 
+[class*="col-"] {
+    width: 100%;
+}
+
 nav a {
     text-decoration: none;
     font-size: 1.2em;
@@ -56,19 +60,7 @@ nav a:hover {
 nav a:active {
     color: #888888;
 }
-/* grids */
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+
 
 /* Clearfix hack */
 .clearfix:after {
@@ -103,6 +95,10 @@ picture{
     float: right;
 }
 
+nav ul li a {
+    font-size: 1.4em;
+}
+
 .menu-top {
     clear: right;
 }
@@ -112,7 +108,6 @@ picture{
 }
 
 .menu-top ul li a {
-    font-size: 1.2em;
     margin-left: 10px;
 }
 
@@ -120,43 +115,40 @@ picture{
     display: none;
 }
 
-.menu-lateral ul li a {
-    padding-left: 5px;
-    vertical-align: top;
-}
 
-.menu-lateral ul li:before{
-    content: url("../img/icon-palheta-25px.png");
+
+.ul-GV {
+    list-style-image: url("../img/icon-palheta-GV-preta-25px.png");
 }
 
 main {
     background-color: rgba(0, 51, 204, 0.8);
     width: 100%;
     padding: 3.5%;
-}
-
-h1 {
-    font-size: 1.5em;
-}
-
-h2, h3 {
-    font-size: 1.3em;
+    position: relative;
 }
 
 p {
+    font-size: 1.2em;
     text-indent: 2em;
 }
 
 .conteudo h1 {
-        margin-top: 0;
+    font-size: 1.8em;
 }
 
 .conteudo h2 {
+    font-size: 1.6em;
     margin-bottom: 10px;
 }
 
 .conteudo h3 {
+    font-size: 1.4em;
     margin-top: 10px;
+}
+
+section:first-child {
+    margin-top: 0;
 }
 
 section {
@@ -172,6 +164,21 @@ section:last-child {
 }
 
 @media only screen and (min-width: 640px) {
+    
+    /* grids */
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+    
     body {
         background-image: url("../img/fundo1366.jpg");
     }
@@ -193,13 +200,32 @@ section:last-child {
         display: block;
         float: left;
         height: 100%;
-        width: 20%;
     }
     
+    .menu-lateral ul li a {
+        padding-left: 5px;
+        vertical-align: top;
+        margin-left: 5px;
+    }
+
+    .menu-lateral ul li:before{
+        content: url("../img/icon-palheta-GV-azul-25px.png");
+    }
+    
+    .menu-lateral li {
+        margin-left: -30px;
+        margin-top: 10px;
+    }
+    
+    menu-lateral li:first-child {
+        margin-top: 0;
+    }
+    
+    
     .conteudo {
+        display: block;
         float: left;
-        width:80%;
-        padding: 0px 20px;
+        height: 100%;
         margin-top: 0;
     }
     
