--- a/siteGV/css/estilo-videos.css
+++ b/siteGV/css/estilo-videos.css
@@ -10,6 +10,8 @@ iframe {
 .embedded-video {
     width: 100%;
     height: 265px;
+    background-color: #222;
+    margin-top: 50px;
 }
 
 .faixa {
@@ -44,7 +46,7 @@ iframe {
     float: right;
 }
 
-#videos nav ul li a:hover{
+#videos-bernardo nav ul li a:hover{
     cursor: pointer;
 }
 
@@ -80,10 +82,9 @@ ul.bottom-menu li a {
 @media only screen and (min-width: 640px) {
     
     .embedded-video {
-    width: 484px;
-    height: 320px;
-    position: relative;
-    background-color: #222;
+        width: 484px;
+        height: 320px;
+        position: relative;
     }
     
     ul.bottom-menu {
