--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -153,7 +153,8 @@ nav ul li a {
 .menu-show li:not(:first-child) {
     display: block;
     width: 50%;
-    background-color: rgba(0, 0, 90, 0.95);
+    background-color: rgba(0, 0, 90, 0.9);
+    color: #fff;
     /*background-color: rgba(134, 179, 0, 0.95);*/
 }
 
