--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -120,7 +120,7 @@ nav ul li a {
 
 #topmenu-holder {
     width: 100%;
-    height: 40px;
+    height: 30px;
     clear: right;
     background-color: rgba(2, 2, 2, 0.8);
 }
@@ -146,8 +146,10 @@ nav ul li a {
 
 .menu-responsivo li.icon {
     display: inline-block;
-    height: 40px;
-    padding: 5px 15px;
+    height: 30px;
+    padding: 0px 10px;
+    border:1px solid rgba(200, 200, 200,0.85);
+    border-radius: 5px;
 }
 
 .menu-show li:not(:first-child) {
