--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -148,8 +148,8 @@ nav ul li a {
     display: inline-block;
     height: 30px;
     padding: 0px 10px;
-    border:1px solid rgba(200, 200, 200,0.85);
-    border-radius: 5px;
+    /*border:1px solid rgba(200, 200, 200,0.85);
+    border-radius: 5px;*/
 }
 
 .menu-show li:not(:first-child) {
