alteração dos textos de A Escola e com a imagem do guitarrista

--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -379,6 +379,9 @@ footer p {
     
     #guitarrista {
         display: inline-block;
+        position: absolute;
+        right: -20px;
+        bottom: -7px;
     }
     
     iframe.dicas {
