--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -268,6 +268,26 @@ footer p {
     text-indent: 0;
 }
 
+.equipe-GV li p{
+    text-indent: 0;
+}
+
+.equipe-GV li {
+    margin-top: 20px;
+}
+
+.membro-GV {
+    font-family: 'Playball', cursive;
+    color: rgb(230, 255, 242); 
+    font-size: 1.3em;
+}
+
+.estagiario-GV {
+    font-family: 'Unkempt', cursive;
+    font-size: 1.1em;
+    color: rgb(230, 255, 242);
+}
+
 @media only screen and (min-width: 640px) {
     body {
         background-image: url("../img/fundo900px.jpg");
