--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -209,19 +209,33 @@ p {
     text-indent: 2em;
 }
 
+.conteudo {
+    font-family: fantasy, cursive;
+}
+
 .conteudo h1 {
-    font-size: 1.8em;
+    font-size: 2em;
 }
 
 .conteudo h2 {
-    font-size: 1.6em;
+    font-size: 1.8em;
     margin-bottom: 10px;
     color: rgb(134, 179, 0);
 }
 
 .conteudo h3 {
-    font-size: 1.4em;
+    font-size: 1.6em;
     margin-top: 10px;
+}
+
+.conteudo p {
+    font-size: 1.4em;
+}
+
+.link-destaque {
+    font-family: 'Unkempt';
+    margin-left: 3px;
+    color: rgb(230, 255, 242);
 }
 
 section:first-child {
@@ -280,6 +294,8 @@ footer p {
     font-family: 'Playball', cursive;
     color: rgb(230, 255, 242); 
     font-size: 1.3em;
+    display: inline-block;
+    margin-right: 3px;
 }
 
 .estagiario-GV {
