fundo do body azul

--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -1,14 +1,5 @@
 @charset "utf-8";
 
-/* cores GV:
-verde: #aad303
-rgb(170, 211, 3)
-hsl(72, 97%, 42%)
-
-azul: 
-
-*/
-
 * {
     box-sizing: border-box;
 }
@@ -30,6 +21,7 @@ body {
     /*background-repeat: repeat-y;*/
     background-position: center top;
     color: #eeeeee;
+    background-color: rgb(0, 0, 90);
 }
 
 header, 
