--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
 
+@import 'https://fonts.googleapis.com/css?family=Courgette|Kavoon';
+
+/*
+font-family: 'Courgette', cursive;
+font-family: 'Kavoon', cursive;
+*/
+
 * {
     box-sizing: border-box;
 }
@@ -16,7 +23,8 @@ html, body {
 }
 
 body {
-    font: .8125em/1.5 Tahoma, Verdana, Geneva, Arial, Helvetica, sans-serif;
+    /*font: .8125em/1.5 Tahoma, Verdana, Geneva, Arial, Helvetica, sans-serif;*/
+    font: 1em cursive;
     background-image: url("../img/fundoMenor.jpg");
     /*background-repeat: repeat-y;*/
     background-position: center top;
@@ -109,7 +117,7 @@ nav ul li a {
     margin-left: 10px;
 }
 
-/* *************   Menu Responsivo  ****************** */
+/* *************   Menu Responsivo  ********************************************************************************************** */
 
 #topmenu-holder {
     width: 100%;
@@ -179,7 +187,7 @@ nav ul li a {
     margin-right: 10px;
 } 
 
-/*   ************************************************* */
+/*   ************************************************************************************************************************ */
 
 .menu-lateral {
     display: none;
@@ -201,12 +209,17 @@ p {
     text-indent: 2em;
 }
 
-.conteudo {
+/*.conteudo {
     font-family: fantasy, cursive;
-}
+}*/
 
 .conteudo h1 {
     font-size: 2em;
+    font-family: 'Kavoon', cursive;
+}
+
+.conteudo h2, h3, a {
+    font-family: cursive;
 }
 
 .conteudo h2 {
@@ -221,6 +234,7 @@ p {
 }
 
 .conteudo p {
+    font-family: 'Courgette', cursive;
     font-size: 1.4em;
 }
 
