mudando a fonte dos h's

--- a/siteGV/css/estilo-respons.css
+++ b/siteGV/css/estilo-respons.css
@@ -221,9 +221,9 @@ p {
     margin-bottom: 20px;
 }
 
-.conteudo h2, h3, a {
+/*.conteudo h2, h3, a {
     font-family: cursive;
-}
+}*/
 
 .conteudo h2 {
     font-size: 1.8em;
